Exclude platform code changes
Signed-off-by: Artur Kugal <artur.kugal@swirldslabs.com>